[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/slime/sprites/walk2.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slime/sprites/walk1.png" type="Texture" id=2]
[ext_resource path="res://enemies/slime/slime.gd" type="Script" id=3]
[ext_resource path="res://assets/enemies/slime/sprites/dead.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/slime/sfx/squashed.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 4 )

[node name="Slime" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -4, 8 )
shape = SubResource( 3 )

[node name="kill_timer" type="Timer" parent="."]
one_shot = true

[node name="raycast_left" type="RayCast2D" parent="."]
position = Vector2( -30, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="raycast_right" type="RayCast2D" parent="."]
position = Vector2( 30, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="SquashedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="kill_timer" to="." method="_on_kill_timer_timeout"]
